<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
                android:key="bg_music"
                android:title="@string/bg_music"
                android:summary="@string/summary_bg_music"
                android:defaultValue="true" />
    <ListPreference
        		android:key="bg_human"
        		android:title="@string/bg_human"
        		android:summary="@string/summary_bg_human"
        		android:entries="@array/color_array"
        		android:entryValues="@array/disp_color_array"/>
    <ListPreference
        		android:key="bg_ai"
        		android:title="@string/bg_ai"
        		android:summary="@string/summary_bg_ai"
        		android:entries="@array/color_array"
        		android:entryValues="@array/disp_color_array"/>
    <ListPreference
        		android:key="player_symbol"
        		android:title="@string/player_symbol"
        		android:summary="@string/summary_player_symbol"
        		android:entries="@array/symbols_array"
        		android:entryValues="@array/disp_symbols_array"/>
</PreferenceScreen>
